tests/ui/privacy/private-struct-access-error.stderr
error[E0603]: struct `S` is private
  --> $DIR/private-struct-access-error.rs:8:14
   |
LL | fn foo(_: a::S) {
   |              ^ private struct
   |
note: the struct `S` is defined here
  --> $DIR/private-struct-access-error.rs:4:5
   |
LL |     struct S;
   |     ^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0603`.
